--- a/.github/workflows/auto-cleanup.yml
+++ b/.github/workflows/auto-cleanup.yml
@@ -6,9 +6,9 @@ on:
     paths:
       - 'Codes'
   
-  # يعمل تلقائياً كل 5 دقائق
+  # يعمل تلقائياً كل دقيقة واحدة
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '* * * * *'
   
   # يمكنك تشغيله يدوياً أيضاً
   workflow_dispatch:
@@ -34,6 +34,7 @@ jobs:
         cat << 'PYTHON_SCRIPT' > cleanup_temp.py
         from datetime import datetime, timedelta
         import sys
+        import os
         
         def parse_duration(duration_str):
             """تحويل المدة إلى timedelta"""
@@ -55,18 +56,25 @@ jobs:
         print("🔍 بدء فحص الأكواد...")
         print("=" * 60)
         
+        # التأكد من وجود الملف
+        if not os.path.exists('Codes'):
+            print("❌ ملف Codes غير موجود!")
+            sys.exit(1)
+        
+        # قراءة الملف
         try:
             with open('Codes', 'r', encoding='utf-8') as f:
                 lines = f.readlines()
-        except FileNotFoundError:
-            print("❌ ملف Codes غير موجود!")
-            sys.exit(0)
+        except Exception as e:
+            print(f"❌ خطأ في قراءة الملف: {e}")
+            sys.exit(1)
         
-        now = datetime.now()
-        print(f"⏰ الوقت الحالي: {now.strftime('%Y-%m-%d %H:%M:%S')}")
+        now = datetime.utcnow()
+        print(f"⏰ الوقت الحالي (UTC): {now.strftime('%Y-%m-%d %H:%M:%S')}")
         print()
         
         valid_codes = []
+        deleted_codes = []
         deleted_count = 0
         
         for line in lines:
@@ -116,6 +124,7 @@ jobs:
                 else:
                     # الكود منتهي
                     deleted_count += 1
+                    deleted_codes.append(code)
                     
                     # حساب الوقت المنقضي
                     time_passed = now - expiry_date
@@ -129,26 +138,49 @@ jobs:
                     else:
                         passed = f"{total_seconds} ثانية"
                     
-                    print(f"🗑️  [{code}] منتهي منذ {passed} - تم حذفه")
+                    print(f"🗑️  [{code}] منتهي منذ {passed} - سيتم حذفه")
             
             except Exception as e:
                 print(f"❌ خطأ في معالجة السطر: {line}")
                 print(f"   التفاصيل: {str(e)}")
                 continue
         
-        # كتابة الأكواد الصالحة
-        with open('Codes', 'w', encoding='utf-8') as f:
-            for code in valid_codes:
-                f.write(code + '\n')
-        
         print()
         print("=" * 60)
-        print("✅ تم الانتهاء من الفحص!")
-        print(f"📊 الأكواد الصالحة: {len(valid_codes)}")
-        print(f"🗑️  الأكواد المحذوفة: {deleted_count}")
+        
+        # كتابة الأكواد الصالحة فقط
+        try:
+            with open('Codes', 'w', encoding='utf-8') as f:
+                for code in valid_codes:
+                    f.write(code + '\n')
+            
+            print(f"✅ تم تحديث ملف Codes بنجاح")
+            print(f"📊 الأكواد الصالحة: {len(valid_codes)}")
+            print(f"🗑️  الأكواد المحذوفة: {deleted_count}")
+            
+            if deleted_count > 0:
+                print(f"\n📝 الأكواد التي تم حذفها:")
+                for code in deleted_codes:
+                    print(f"   • {code}")
+        
+        except Exception as e:
+            print(f"❌ خطأ في كتابة الملف: {e}")
+            sys.exit(1)
+        
         print("=" * 60)
         
-        # إرجاع 0 إذا تم حذف أكواد، 1 إذا لم يتم حذف شيء
+        # التحقق من الكتابة
+        try:
+            with open('Codes', 'r', encoding='utf-8') as f:
+                new_content = f.read()
+                print(f"\n✓ محتوى الملف بعد الحذف:")
+                print("─" * 40)
+                print(new_content if new_content.strip() else "(الملف فارغ)")
+                print("─" * 40)
+        except:
+            pass
+        
+        # إرجاع 0 إذا تم حذف أكواد
         sys.exit(0 if deleted_count > 0 else 1)
         PYTHON_SCRIPT
         
@@ -156,7 +188,7 @@ jobs:
         CLEANUP_EXIT_CODE=$?
         rm cleanup_temp.py
         
-        echo "EXIT_CODE=$CLEANUP_EXIT_CODE" >> $GITHUB_ENV
+        echo "CLEANUP_RESULT=$CLEANUP_EXIT_CODE" >> $GITHUB_ENV
     
     - name: 📤 رفع التغييرات
       run: |
@@ -190,5 +222,5 @@ jobs:
         fi
     
     - name: ℹ️ لا توجد أكواد منتهية
-      if: env.EXIT_CODE != '0'
-      run: echo "✅ جميع الأكواد لا تزال صالحة"
+      if: env.CLEANUP_RESULT != '0'
+      run: echo "✅ جميع الأكواد لا تزال صالحة - لا توجد تغييرات"
