--- a/.github/workflows/auto-cleanup.yml
+++ b/.github/workflows/auto-cleanup.yml
@@ -1,1 +1,306 @@
+‏name: 🗑️ حذف الأكواد المنتهية (تلقائي)
 
+‏on:
+  # يعمل تلقائياً عند تعديل ملف Codes
+‏  push:
+‏    paths:
+‏      - 'Codes'
+  
+  # يعمل تلقائياً كل دقيقة
+‏  schedule:
+‏    - cron: '* * * * *'
+  
+  # يمكنك تشغيله يدوياً
+‏  workflow_dispatch:
+
+‏permissions:
+‏  contents: write
+
+‏jobs:
+‏  cleanup:
+‏    runs-on: ubuntu-latest
+    
+‏    steps:
+‏    - name: 📥 تحميل المشروع
+‏      uses: actions/checkout@v3
+    
+‏    - name: 🐍 تثبيت Python
+‏      uses: actions/setup-python@v4
+‏      with:
+‏        python-version: '3.10'
+    
+‏    - name: 🔍 فحص وحذف الأكواد المنتهية (تلقائي ذكي)
+‏      run: |
+‏        cat << 'PYTHON_SCRIPT' > cleanup_temp.py
+‏        from datetime import datetime, timedelta
+‏        import sys
+‏        import os
+‏        import time
+‏        import re
+        
+‏        def parse_duration(duration_str):
+            """تحويل المدة إلى timedelta"""
+‏            duration_str = duration_str.strip().lower()
+‏            try:
+‏                if duration_str.endswith('s'):
+‏                    return timedelta(seconds=int(duration_str[:-1]))
+‏                elif duration_str.endswith('m'):
+‏                    return timedelta(minutes=int(duration_str[:-1]))
+‏                elif duration_str.endswith('h'):
+‏                    return timedelta(hours=int(duration_str[:-1]))
+‏                elif duration_str.endswith('d'):
+‏                    return timedelta(days=int(duration_str[:-1]))
+‏            except:
+‏                return None
+‏            return None
+        
+‏        print("=" * 70)
+‏        print("🔍 بدء فحص الأكواد (نظام ذكي تلقائي)...")
+‏        print("=" * 70)
+        
+        # التأكد من وجود الملف
+‏        if not os.path.exists('Codes'):
+‏            print("❌ ملف Codes غير موجود!")
+‏            sys.exit(1)
+        
+        # قراءة الملف
+‏        try:
+‏            with open('Codes', 'r', encoding='utf-8') as f:
+‏                lines = f.readlines()
+‏        except Exception as e:
+‏            print(f"❌ خطأ في قراءة الملف: {e}")
+‏            sys.exit(1)
+        
+‏        now = datetime.utcnow()
+‏        print(f"⏰ الوقت الحالي (UTC): {now.strftime('%Y-%m-%d %H:%M:%S.%f')[:-3]}")
+‏        print()
+        
+‏        valid_codes = []
+‏        deleted_codes = []
+‏        pending_codes = []
+‏        deleted_count = 0
+‏        updated_lines = []
+        
+        # المرحلة 1: فحص وتحديث جميع الأكواد
+‏        for line_num, line in enumerate(lines, 1):
+‏            original_line = line
+‏            line = line.strip()
+‏            if not line:
+‏                continue
+            
+‏            try:
+‏                parts = line.split('|')
+                
+                # الصيغة الجديدة: code|duration (بدون تاريخ)
+‏                if len(parts) == 2:
+‏                    code = parts[0].strip()
+‏                    duration_str = parts[1].strip()
+                    
+                    # تحويل للصيغة الكاملة بإضافة الوقت الحالي
+‏                    duration = parse_duration(duration_str)
+‏                    if duration is None:
+‏                        print(f"⚠️  سطر {line_num}: مدة غير صالحة - {duration_str}")
+‏                        continue
+                    
+                    # إضافة الوقت الحالي
+‏                    code_date = now
+‏                    full_line = f"{code}|{now.strftime('%Y-%m-%dT%H:%M:%S')}|{duration_str}"
+‏                    updated_lines.append((line_num, original_line, full_line))
+                    
+‏                    print(f"🆕 [{code}] تم إضافة التوقيت تلقائياً")
+‏                    print(f"   📝 من: {line}")
+‏                    print(f"   📝 إلى: {full_line}")
+                    
+                    # حساب وقت الانتهاء
+‏                    expiry_date = code_date + duration
+‏                    time_diff = (expiry_date - now).total_seconds()
+                    
+‏                    if time_diff > 0:
+‏                        valid_codes.append(full_line)
+                        
+‏                        if time_diff > 86400:
+‏                            remaining = f"{int(time_diff // 86400)} يوم"
+‏                        elif time_diff > 3600:
+‏                            remaining = f"{int(time_diff // 3600)} ساعة"
+‏                        elif time_diff > 60:
+‏                            remaining = f"{int(time_diff // 60)} دقيقة"
+‏                        else:
+‏                            remaining = f"{int(time_diff)} ثانية"
+                        
+‏                        print(f"   ✅ صالح - متبقي: {remaining}")
+                        
+‏                        if time_diff <= 120:
+‏                            pending_codes.append({
+‏                                'code': code,
+‏                                'line': full_line,
+‏                                'expiry': expiry_date,
+‏                                'wait_seconds': time_diff
+                            })
+‏                            print(f"   ⏳ سينتهي خلال {int(time_diff)} ثانية - في قائمة الانتظار")
+                    
+‏                    print()
+‏                    continue
+                
+                # الصيغة القديمة: code|date|duration (مع تاريخ)
+‏                elif len(parts) == 3:
+‏                    code = parts[0].strip()
+‏                    date_str = parts[1].strip()
+‏                    duration_str = parts[2].strip()
+                    
+                    # تحليل التاريخ
+‏                    code_date = datetime.fromisoformat(date_str)
+                    
+                    # تحليل المدة
+‏                    duration = parse_duration(duration_str)
+‏                    if duration is None:
+‏                        print(f"⚠️  سطر {line_num}: مدة غير صالحة - {duration_str}")
+‏                        continue
+                    
+                    # حساب وقت الانتهاء
+‏                    expiry_date = code_date + duration
+‏                    time_diff = (expiry_date - now).total_seconds()
+                    
+‏                    if time_diff > 0:
+‏                        valid_codes.append(line)
+                        
+‏                        if time_diff > 86400:
+‏                            remaining = f"{int(time_diff // 86400)} يوم"
+‏                        elif time_diff > 3600:
+‏                            remaining = f"{int(time_diff // 3600)} ساعة"
+‏                        elif time_diff > 60:
+‏                            remaining = f"{int(time_diff // 60)} دقيقة"
+‏                        else:
+‏                            remaining = f"{int(time_diff)} ثانية"
+                        
+‏                        print(f"✅ [{code}] صالح - متبقي: {remaining}")
+                        
+‏                        if time_diff <= 120:
+‏                            pending_codes.append({
+‏                                'code': code,
+‏                                'line': line,
+‏                                'expiry': expiry_date,
+‏                                'wait_seconds': time_diff
+                            })
+‏                            print(f"   ⏳ سينتهي خلال {int(time_diff)} ثانية - في قائمة الانتظار")
+                    
+‏                    else:
+‏                        deleted_count += 1
+‏                        deleted_codes.append(code)
+                        
+‏                        time_passed = abs(time_diff)
+‏                        if time_passed > 86400:
+‏                            passed = f"{int(time_passed // 86400)} يوم"
+‏                        elif time_passed > 3600:
+‏                            passed = f"{int(time_passed // 3600)} ساعة"
+‏                        elif time_passed > 60:
+‏                            passed = f"{int(time_passed // 60)} دقيقة"
+‏                        else:
+‏                            passed = f"{int(time_passed)} ثانية"
+                        
+‏                        print(f"🗑️  [{code}] منتهي منذ {passed} - سيتم حذفه")
+                
+‏                else:
+‏                    print(f"⚠️  سطر {line_num}: صيغة خاطئة - {line}")
+‏                    continue
+            
+‏            except Exception as e:
+‏                print(f"❌ خطأ في معالجة سطر {line_num}: {line}")
+‏                print(f"   التفاصيل: {str(e)}")
+‏                continue
+        
+‏        print()
+‏        print("=" * 70)
+        
+        # المرحلة 2: الانتظار الدقيق للأكواد القريبة من الانتهاء
+‏        if pending_codes:
+‏            print(f"⏳ انتظار دقيق لـ {len(pending_codes)} كود(أكواد) قريب(ة) من الانتهاء...")
+‏            print("=" * 70)
+            
+‏            for item in pending_codes:
+‏                if item['wait_seconds'] > 0:
+‏                    print(f"⏱️  انتظار {int(item['wait_seconds'])} ثانية لـ [{item['code']}]...")
+‏                    time.sleep(item['wait_seconds'])
+                    
+‏                    valid_codes.remove(item['line'])
+‏                    deleted_codes.append(item['code'])
+‏                    deleted_count += 1
+                    
+‏                    now_after = datetime.utcnow()
+‏                    print(f"✓ [{item['code']}] تم حذفه في {now_after.strftime('%H:%M:%S.%f')[:-3]} بالضبط!")
+            
+‏            print("=" * 70)
+        
+        # كتابة الأكواد الصالحة فقط
+‏        try:
+‏            with open('Codes', 'w', encoding='utf-8') as f:
+‏                for code in valid_codes:
+‏                    f.write(code + '\n')
+            
+‏            print(f"✅ تم تحديث ملف Codes بنجاح")
+‏            print(f"📊 الأكواد الصالحة: {len(valid_codes)}")
+‏            print(f"🗑️  الأكواد المحذوفة: {deleted_count}")
+            
+‏            if updated_lines:
+‏                print(f"🆕 الأكواد التي تم تحديث توقيتها: {len(updated_lines)}")
+            
+‏            if deleted_count > 0:
+‏                print(f"\n📝 الأكواد التي تم حذفها:")
+‏                for code in deleted_codes:
+‏                    print(f"   • {code}")
+        
+‏        except Exception as e:
+‏            print(f"❌ خطأ في كتابة الملف: {e}")
+‏            sys.exit(1)
+        
+‏        print("=" * 70)
+        
+        # التحقق من الكتابة
+‏        try:
+‏            with open('Codes', 'r', encoding='utf-8') as f:
+‏                new_content = f.read()
+‏                print(f"\n✓ محتوى الملف بعد التحديث:")
+‏                print("─" * 50)
+‏                print(new_content if new_content.strip() else "(الملف فارغ - تم حذف جميع الأكواد)")
+‏                print("─" * 50)
+‏        except:
+‏            pass
+        
+        # إرجاع 0 إذا تم حذف أكواد أو تحديث
+‏        sys.exit(0 if (deleted_count > 0 or updated_lines) else 1)
+‏        PYTHON_SCRIPT
+        
+‏        timeout 600 python cleanup_temp.py
+‏        CLEANUP_EXIT_CODE=$?
+‏        rm -f cleanup_temp.py
+        
+‏        echo "CLEANUP_RESULT=$CLEANUP_EXIT_CODE" >> $GITHUB_ENV
+    
+‏    - name: 📤 رفع التغييرات
+‏      run: |
+‏        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+‏        git config --local user.name "🤖 GitHub Actions Bot"
+        
+‏        git add Codes
+        
+‏        if git diff --staged --quiet; then
+‏          echo "✅ لا توجد تغييرات"
+‏        else
+‏          echo "📝 تم العثور على تغييرات - سيتم رفعها..."
+          
+‏          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+‏          git diff --staged
+‏          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          
+‏          TIMESTAMP=$(date +'%Y-%m-%d %H:%M:%S')
+‏          git commit -m "🗑️ تحديث وحذف الأكواد تلقائياً [$TIMESTAMP]"
+          
+‏          echo "⬆️ جاري رفع التغييرات إلى GitHub..."
+‏          git push origin main || git push origin master
+          
+‏          echo "✅ تم رفع التغييرات بنجاح!"
+‏          echo "🔗 تحقق من الملف: https://github.com/${{ github.repository }}/blob/main/Codes"
+‏        fi
+    
+‏    - name: ℹ️ لا توجد تغييرات
+‏      if: env.CLEANUP_RESULT != '0'
+‏      run: echo "✅ جميع الأكواد صالحة - لا توجد تغييرات"
