--- a/.github/workflows/auto-cleanup.yml
+++ b/.github/workflows/auto-cleanup.yml
@@ -1,16 +1,13 @@
-‏name: 🗑️ حذف الأكواد المنتهية (تلقائي)
+‏name: Auto Delete Expired Codes
 
 on:
-  # يعمل تلقائياً عند تعديل ملف Codes
   push:
     paths:
       - 'Codes'
   
-  # يعمل تلقائياً كل دقيقة
   schedule:
     - cron: '* * * * *'
   
-  # يمكنك تشغيله يدوياً
   workflow_dispatch:
 
 permissions:
@@ -21,15 +18,15 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: 📥 تحميل المشروع
+    - name: Checkout Repository
       uses: actions/checkout@v3
     
-    - name: 🐍 تثبيت Python
+    - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
     
-    - name: 🔍 فحص وحذف الأكواد المنتهية (تلقائي ذكي)
+    - name: Check and Delete Expired Codes
       run: |
         cat << 'PYTHON_SCRIPT' > cleanup_temp.py
         from datetime import datetime, timedelta
@@ -39,7 +36,6 @@ jobs:
         import re
         
         def parse_duration(duration_str):
-            """تحويل المدة إلى timedelta"""
             duration_str = duration_str.strip().lower()
             try:
                 if duration_str.endswith('s'):
@@ -55,24 +51,22 @@ jobs:
             return None
         
         print("=" * 70)
-        print("🔍 بدء فحص الأكواد (نظام ذكي تلقائي)...")
+        print("Checking codes (smart system)...")
         print("=" * 70)
         
-        # التأكد من وجود الملف
         if not os.path.exists('Codes'):
-            print("❌ ملف Codes غير موجود!")
+            print("Codes file not found!")
             sys.exit(1)
         
-        # قراءة الملف
         try:
             with open('Codes', 'r', encoding='utf-8') as f:
                 lines = f.readlines()
         except Exception as e:
-            print(f"❌ خطأ في قراءة الملف: {e}")
+            print(f"Error reading file: {e}")
             sys.exit(1)
         
         now = datetime.utcnow()
-        print(f"⏰ الوقت الحالي (UTC): {now.strftime('%Y-%m-%d %H:%M:%S.%f')[:-3]}")
+        print(f"Current time (UTC): {now.strftime('%Y-%m-%d %H:%M:%S.%f')[:-3]}")
         print()
         
         valid_codes = []
@@ -81,7 +75,6 @@ jobs:
         deleted_count = 0
         updated_lines = []
         
-        # المرحلة 1: فحص وتحديث جميع الأكواد
         for line_num, line in enumerate(lines, 1):
             original_line = line
             line = line.strip()
@@ -91,27 +84,23 @@ jobs:
             try:
                 parts = line.split('|')
                 
-                # الصيغة الجديدة: code|duration (بدون تاريخ)
                 if len(parts) == 2:
                     code = parts[0].strip()
                     duration_str = parts[1].strip()
                     
-                    # تحويل للصيغة الكاملة بإضافة الوقت الحالي
                     duration = parse_duration(duration_str)
                     if duration is None:
-                        print(f"⚠️  سطر {line_num}: مدة غير صالحة - {duration_str}")
+                        print(f"Line {line_num}: Invalid duration - {duration_str}")
                         continue
                     
-                    # إضافة الوقت الحالي
                     code_date = now
                     full_line = f"{code}|{now.strftime('%Y-%m-%dT%H:%M:%S')}|{duration_str}"
                     updated_lines.append((line_num, original_line, full_line))
                     
-                    print(f"🆕 [{code}] تم إضافة التوقيت تلقائياً")
-                    print(f"   📝 من: {line}")
-                    print(f"   📝 إلى: {full_line}")
+                    print(f"[{code}] Auto-added timestamp")
+                    print(f"   From: {line}")
+                    print(f"   To: {full_line}")
                     
-                    # حساب وقت الانتهاء
                     expiry_date = code_date + duration
                     time_diff = (expiry_date - now).total_seconds()
                     
@@ -119,15 +108,15 @@ jobs:
                         valid_codes.append(full_line)
                         
                         if time_diff > 86400:
-                            remaining = f"{int(time_diff // 86400)} يوم"
+                            remaining = f"{int(time_diff // 86400)} day"
                         elif time_diff > 3600:
-                            remaining = f"{int(time_diff // 3600)} ساعة"
+                            remaining = f"{int(time_diff // 3600)} hr"
                         elif time_diff > 60:
-                            remaining = f"{int(time_diff // 60)} دقيقة"
+                            remaining = f"{int(time_diff // 60)} min"
                         else:
-                            remaining = f"{int(time_diff)} ثانية"
+                            remaining = f"{int(time_diff)} sec"
                         
-                        print(f"   ✅ صالح - متبقي: {remaining}")
+                        print(f"   Valid - Remaining: {remaining}")
                         
                         if time_diff <= 120:
                             pending_codes.append({
@@ -136,27 +125,23 @@ jobs:
                                 'expiry': expiry_date,
                                 'wait_seconds': time_diff
                             })
-                            print(f"   ⏳ سينتهي خلال {int(time_diff)} ثانية - في قائمة الانتظار")
+                            print(f"   Will expire in {int(time_diff)} sec - Waiting")
                     
                     print()
                     continue
                 
-                # الصيغة القديمة: code|date|duration (مع تاريخ)
                 elif len(parts) == 3:
                     code = parts[0].strip()
                     date_str = parts[1].strip()
                     duration_str = parts[2].strip()
                     
-                    # تحليل التاريخ
                     code_date = datetime.fromisoformat(date_str)
                     
-                    # تحليل المدة
                     duration = parse_duration(duration_str)
                     if duration is None:
-                        print(f"⚠️  سطر {line_num}: مدة غير صالحة - {duration_str}")
+                        print(f"Line {line_num}: Invalid duration - {duration_str}")
                         continue
                     
-                    # حساب وقت الانتهاء
                     expiry_date = code_date + duration
                     time_diff = (expiry_date - now).total_seconds()
                     
@@ -164,15 +149,15 @@ jobs:
                         valid_codes.append(line)
                         
                         if time_diff > 86400:
-                            remaining = f"{int(time_diff // 86400)} يوم"
+                            remaining = f"{int(time_diff // 86400)} day"
                         elif time_diff > 3600:
-                            remaining = f"{int(time_diff // 3600)} ساعة"
+                            remaining = f"{int(time_diff // 3600)} hr"
                         elif time_diff > 60:
-                            remaining = f"{int(time_diff // 60)} دقيقة"
+                            remaining = f"{int(time_diff // 60)} min"
                         else:
-                            remaining = f"{int(time_diff)} ثانية"
+                            remaining = f"{int(time_diff)} sec"
                         
-                        print(f"✅ [{code}] صالح - متبقي: {remaining}")
+                        print(f"[{code}] Valid - Remaining: {remaining}")
                         
                         if time_diff <= 120:
                             pending_codes.append({
@@ -181,7 +166,7 @@ jobs:
                                 'expiry': expiry_date,
                                 'wait_seconds': time_diff
                             })
-                            print(f"   ⏳ سينتهي خلال {int(time_diff)} ثانية - في قائمة الانتظار")
+                            print(f"   Will expire in {int(time_diff)} sec - Waiting")
                     
                     else:
                         deleted_count += 1
@@ -189,36 +174,35 @@ jobs:
                         
                         time_passed = abs(time_diff)
                         if time_passed > 86400:
-                            passed = f"{int(time_passed // 86400)} يوم"
+                            passed = f"{int(time_passed // 86400)} day"
                         elif time_passed > 3600:
-                            passed = f"{int(time_passed // 3600)} ساعة"
+                            passed = f"{int(time_passed // 3600)} hr"
                         elif time_passed > 60:
-                            passed = f"{int(time_passed // 60)} دقيقة"
+                            passed = f"{int(time_passed // 60)} min"
                         else:
-                            passed = f"{int(time_passed)} ثانية"
+                            passed = f"{int(time_passed)} sec"
                         
-                        print(f"🗑️  [{code}] منتهي منذ {passed} - سيتم حذفه")
+                        print(f"[{code}] Expired {passed} ago - Deleting")
                 
                 else:
-                    print(f"⚠️  سطر {line_num}: صيغة خاطئة - {line}")
+                    print(f"Line {line_num}: Wrong format - {line}")
                     continue
             
             except Exception as e:
-                print(f"❌ خطأ في معالجة سطر {line_num}: {line}")
-                print(f"   التفاصيل: {str(e)}")
+                print(f"Error on line {line_num}: {line}")
+                print(f"   Details: {str(e)}")
                 continue
         
         print()
         print("=" * 70)
         
-        # المرحلة 2: الانتظار الدقيق للأكواد القريبة من الانتهاء
         if pending_codes:
-            print(f"⏳ انتظار دقيق لـ {len(pending_codes)} كود(أكواد) قريب(ة) من الانتهاء...")
+            print(f"Waiting for {len(pending_codes)} code(s) to expire...")
             print("=" * 70)
             
             for item in pending_codes:
                 if item['wait_seconds'] > 0:
-                    print(f"⏱️  انتظار {int(item['wait_seconds'])} ثانية لـ [{item['code']}]...")
+                    print(f"Waiting {int(item['wait_seconds'])} sec for [{item['code']}]...")
                     time.sleep(item['wait_seconds'])
                     
                     valid_codes.remove(item['line'])
@@ -226,46 +210,43 @@ jobs:
                     deleted_count += 1
                     
                     now_after = datetime.utcnow()
-                    print(f"✓ [{item['code']}] تم حذفه في {now_after.strftime('%H:%M:%S.%f')[:-3]} بالضبط!")
+                    print(f"[{item['code']}] Deleted at {now_after.strftime('%H:%M:%S.%f')[:-3]} exactly!")
             
             print("=" * 70)
         
-        # كتابة الأكواد الصالحة فقط
         try:
             with open('Codes', 'w', encoding='utf-8') as f:
                 for code in valid_codes:
                     f.write(code + '\n')
             
-            print(f"✅ تم تحديث ملف Codes بنجاح")
-            print(f"📊 الأكواد الصالحة: {len(valid_codes)}")
-            print(f"🗑️  الأكواد المحذوفة: {deleted_count}")
+            print(f"File updated successfully")
+            print(f"Valid codes: {len(valid_codes)}")
+            print(f"Deleted codes: {deleted_count}")
             
             if updated_lines:
-                print(f"🆕 الأكواد التي تم تحديث توقيتها: {len(updated_lines)}")
+                print(f"Updated timestamps: {len(updated_lines)}")
             
             if deleted_count > 0:
-                print(f"\n📝 الأكواد التي تم حذفها:")
+                print(f"\nDeleted codes:")
                 for code in deleted_codes:
-                    print(f"   • {code}")
+                    print(f"   - {code}")
         
         except Exception as e:
-            print(f"❌ خطأ في كتابة الملف: {e}")
+            print(f"Error writing file: {e}")
             sys.exit(1)
         
         print("=" * 70)
         
-        # التحقق من الكتابة
         try:
             with open('Codes', 'r', encoding='utf-8') as f:
                 new_content = f.read()
-                print(f"\n✓ محتوى الملف بعد التحديث:")
-                print("─" * 50)
-                print(new_content if new_content.strip() else "(الملف فارغ - تم حذف جميع الأكواد)")
-                print("─" * 50)
+                print(f"\nFile content after update:")
+                print("-" * 50)
+                print(new_content if new_content.strip() else "(Empty file)")
+                print("-" * 50)
         except:
             pass
         
-        # إرجاع 0 إذا تم حذف أكواد أو تحديث
         sys.exit(0 if (deleted_count > 0 or updated_lines) else 1)
         PYTHON_SCRIPT
         
@@ -275,32 +256,32 @@ jobs:
         
         echo "CLEANUP_RESULT=$CLEANUP_EXIT_CODE" >> $GITHUB_ENV
     
-    - name: 📤 رفع التغييرات
+    - name: Upload Changes
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "🤖 GitHub Actions Bot"
+        git config --local user.name "GitHub Actions Bot"
         
         git add Codes
         
         if git diff --staged --quiet; then
-          echo "✅ لا توجد تغييرات"
+          echo "No changes"
         else
-          echo "📝 تم العثور على تغييرات - سيتم رفعها..."
+          echo "Changes found - uploading..."
           
-          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "============================================"
           git diff --staged
-          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "============================================"
           
           TIMESTAMP=$(date +'%Y-%m-%d %H:%M:%S')
-          git commit -m "🗑️ تحديث وحذف الأكواد تلقائياً [$TIMESTAMP]"
+          git commit -m "Auto update and delete codes [$TIMESTAMP]"
           
-          echo "⬆️ جاري رفع التغييرات إلى GitHub..."
+          echo "Uploading changes to GitHub..."
           git push origin main || git push origin master
           
-          echo "✅ تم رفع التغييرات بنجاح!"
-          echo "🔗 تحقق من الملف: https://github.com/${{ github.repository }}/blob/main/Codes"
+          echo "Changes uploaded successfully!"
+          echo "Check file: https://github.com/${{ github.repository }}/blob/main/Codes"
         fi
     
-    - name: ℹ️ لا توجد تغييرات
+    - name: No Changes
       if: env.CLEANUP_RESULT != '0'
-      run: echo "✅ جميع الأكواد صالحة - لا توجد تغييرات"
+      run: echo "All codes are valid - no changes"
